feat: add username check route to api
