# app/serializers/username_verification_serializer.rb
@@ -1,0 +1,3 @@
+class UsernameVerificationSerializer < BaseSerializer
+  attributes :available, :username
+end 
